--- a/frontent/pages/productos.html
+++ b/frontent/pages/productos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -21,7 +20,8 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 	<!-- Font Poppins -->
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+		rel="stylesheet">
 </head>
 
 <body>
@@ -203,7 +203,8 @@
 	</div>
 
 	<!-- Modal Crear Cliente (usado cuando usuario logeado no tiene cliente en backend) -->
-	<div class="modal fade" id="createClienteModal" tabindex="-1" aria-labelledby="createClienteModalLabel" aria-hidden="true">
+	<div class="modal fade" id="createClienteModal" tabindex="-1" aria-labelledby="createClienteModalLabel"
+		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -234,7 +235,8 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button type="button" id="createClienteCancel" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+						<button type="button" id="createClienteCancel" class="btn btn-secondary"
+							data-bs-dismiss="modal">Cancelar</button>
 						<button type="submit" class="btn btn-primary">Crear cliente y reservar</button>
 					</div>
 				</form>
@@ -253,12 +255,12 @@
 					<!-- Nav tabs -->
 					<ul class="nav nav-tabs mb-3" id="authTab" role="tablist">
 						<li class="nav-item" role="presentation">
-							<button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#loginTabPane"
-								type="button" role="tab">Login</button>
+							<button class="nav-link active" id="login-tab" data-bs-toggle="tab"
+								data-bs-target="#loginTabPane" type="button" role="tab">Login</button>
 						</li>
 						<li class="nav-item" role="presentation">
-							<button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#registerTabPane"
-								type="button" role="tab">Registro</button>
+							<button class="nav-link" id="register-tab" data-bs-toggle="tab"
+								data-bs-target="#registerTabPane" type="button" role="tab">Registro</button>
 						</li>
 					</ul>
 					<div class="tab-content">
@@ -294,7 +296,8 @@
 									<input type="password" class="form-control" id="registerPassword2" required>
 								</div>
 								<div id="registerError" class="text-danger" style="display:none;"></div>
-								<div id="registerSuccess" class="text-success" style="display:none;">¡Registro exitoso! Ahora
+								<div id="registerSuccess" class="text-success" style="display:none;">¡Registro exitoso!
+									Ahora
 									puedes iniciar sesión.</div>
 								<button type="submit" class="btn btn-custom w-100 mt-2">Registrarse</button>
 							</form>
@@ -311,6 +314,29 @@
 	<script src="../assets/js/products.js"></script>
 	<script src="../assets/js/dark-mode.js"></script>
 	<script src="../assets/js/login.js"></script>
+	
+	<!-- Incluir el widget de chat -->
+	<script src="../assets/js/chat-ai.js"></script>
+
+	<!-- Incluir el HTML del widget -->
+	<iframe src="../assets/components/chat-ai-widget.html" style="display:none;" id="chatWidgetLoader">
+	</iframe>
+
+	<script>
+		// Cargar el widget de chat después de que la página cargue
+		window.addEventListener('load', function () {
+			fetch('../assets/components/chat-ai-widget.html')
+				.then(response => response.text())
+				.then(html => {
+					document.body.insertAdjacentHTML('beforeend', html);
+					// Reinicializar el chat después de cargar el HTML
+					new ChatAI();
+				})
+				.catch(error => {
+					console.error('Error loading chat widget:', error);
+				});
+		});
+	</script>
 </body>
 
 </html>
