--- a/frontent/index.html
+++ b/frontent/index.html
@@ -63,7 +63,7 @@
 							</path>
 						</svg>
 					</button>
-					<button id="shopCar" class="btn btn-custom-nav"  href="./pages/productos.html">
+					<button id="btnCarrito" class="btn btn-custom-nav cart-toggle">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
 							stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
 							class="lucide lucide-shopping-cart h-5 w-5 icon-animate" aria-hidden="true">
@@ -343,6 +343,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/js/dark-mode.js"></script>
 	<script src="assets/js/login.js"></script>
+	<script src="assets/js/carrito.js"></script>
 	<script>
   // Load products from JSON or localStorage (adminProducts)
   async function getProducts() {
