--- a/frontent/admin/admin-categorias.html
+++ b/frontent/admin/admin-categorias.html
@@ -116,6 +116,12 @@
               <button class="nav-link w-100 text-start" id="tab-estadisticas" data-bs-toggle="pill"
                 data-bs-target="#panel-mensajes" type="button" role="tab" onclick="window.location.href='admin-mensajes.html'">Mensajes</button>
             </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link w-100 text-start" id="tab-usuarios" type="button"
+                onclick="window.location.href='admin-usuarios.html'">
+                Usuarios
+              </button>
+            </li>
           </ul>
         </div>
       </nav>
