--- a/frontent/admin/admin-estadisticas.html
+++ b/frontent/admin/admin-estadisticas.html
@@ -74,6 +74,12 @@
             <li><button class="nav-link" onclick="location.href='admin-reservas.html'">Reservas</button></li>
             <li><button class="nav-link active" onclick="location.href='admin-estadisticas.html'">Estadísticas</button></li>
             <li><button class="nav-link" onclick="location.href='admin-mensajes.html'">Mensajes</button></li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link w-100 text-start" id="tab-usuarios" type="button"
+                onclick="window.location.href='admin-usuarios.html'">
+                Usuarios
+              </button>
+            </li>
           </ul>
         </div>
       </nav>
@@ -92,6 +98,12 @@
             <li><button class="nav-link" onclick="location.href='admin-reservas.html'">Reservas</button></li>
             <li><button class="nav-link active" onclick="location.href='admin-estadisticas.html'">Estadísticas</button></li>
             <li><button class="nav-link" onclick="location.href='admin-mensajes.html'">Mensajes</button></li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link w-100 text-start" id="tab-usuarios" type="button"
+                onclick="window.location.href='admin-usuarios.html'">
+                Usuarios
+              </button>
+            </li>
           </ul>
         </div>
       </div>
