--- a/frontent/admin/admin-reservas.html
+++ b/frontent/admin/admin-reservas.html
@@ -345,6 +345,12 @@
                   Mensajes
                 </button>
               </li>
+              <li class="nav-item" role="presentation">
+              <button class="nav-link w-100 text-start" id="tab-usuarios" type="button"
+                onclick="window.location.href='admin-usuarios.html'">
+                Usuarios
+              </button>
+            </li>
             </ul>
           </div>
         </div>
