--- a/frontent/admin/admin-estadisticas.html
+++ b/frontent/admin/admin-estadisticas.html
@@ -149,5 +149,7 @@
   <script src="../assets/js/dark-mode.js"></script>
   <script src="../assets/js/login.js"></script>
   <script src="../assets/js/admin-estadisticas.js"></script>
+  <!-- En admin-productos.html, admin-usuarios.html, etc. -->
+  <script src="../assets/js/role-manager.js"></script>
 </body>
 </html>
