--- a/frontent/admin/admin-productos.html
+++ b/frontent/admin/admin-productos.html
@@ -113,7 +113,7 @@
 
             <li class="nav-item" role="presentation">
               <button class="nav-link w-100 text-start" id="tab-clientes" data-bs-toggle="pill"
-                data-bs-target="#panel-clientes" type="button" role="tab">
+                data-bs-target="#panel-clientes" type="button" onclick="window.location.href='admin-clientes.html'">
                 Clientes
               </button>
             </li>
@@ -469,6 +469,8 @@
         });
     });
   </script>
+  <!-- En admin-productos.html, admin-usuarios.html, etc. -->
+  <script src="../assets/js/role-manager.js"></script>
 </body>
 
 </html>
