--- a/frontent/admin/admin-reservas.html
+++ b/frontent/admin/admin-reservas.html
@@ -235,6 +235,12 @@
                   Mensajes
                 </button>
               </li>
+              <li class="nav-item" role="presentation">
+              <button class="nav-link w-100 text-start" id="tab-usuarios" type="button"
+                onclick="window.location.href='admin-usuarios.html'">
+                Usuarios
+              </button>
+            </li>
             </ul>
           </div>
         </nav>
@@ -650,5 +656,7 @@
     </script>
     <script src="../assets/js/utils.js"></script>
     <script src="../assets/js/admin-reservas.js"></script>
+    <!-- En admin-productos.html, admin-usuarios.html, etc. -->
+    <script src="../assets/js/role-manager.js"></script>
   </body>
 </html>
