--- a/frontent/admin/admin-categorias.html
+++ b/frontent/admin/admin-categorias.html
@@ -257,6 +257,8 @@
   <script src="../assets/js/login.js"></script>
   <script src="../assets/js/utils.js"></script>
   <script src="../assets/js/admin-categorias.js"></script>
+  <!-- En admin-productos.html, admin-usuarios.html, etc. -->
+  <script src="../assets/js/role-manager.js"></script>
 </body>
 
 </html>
