--- a/frontent/admin/admin-usuarios.html
+++ b/frontent/admin/admin-usuarios.html
@@ -502,5 +502,7 @@
     <script src="../assets/js/login.js"></script>
     <script src="../assets/js/utils.js"></script>
     <script src="../assets/js/admin-usuarios.js"></script>
+    <!-- En admin-productos.html, admin-usuarios.html, etc. -->
+    <script src="../assets/js/role-manager.js"></script>
 </body>
 </html>
